--- a/startpage/src/assets/_custom.scss
+++ b/startpage/src/assets/_custom.scss
@@ -7,37 +7,54 @@ $theme-colors: (
 //Custom created color used for accent colors on the site
 $accent: #7986CB;
 
-//Override Mal style, doesent work yet
-// @media (min-width: 576px) {
-//   .card-columns {
-//     -webkit-column-count: 2;
-//     -moz-column-count: 2;
-//     column-count: 2;
-//     -webkit-column-gap: 1.25rem;
-//     -moz-column-gap: 1.25rem;
-//     column-gap: 1.25rem;
-//     orphans: 1;
-//     widows: 1;
-//   }
-//   .card-columns .card {
-//     display: inline-block;
-//     width: 100%;
-//   }
-// }
+// override the default bootstrap setting for card-columns class
+@media (min-width: 576px) {
+  .card-columns {
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
+    -webkit-column-gap: 1.25rem;
+    -moz-column-gap: 1.25rem;
+    column-gap: 1.25rem;
+    orphans: 1;
+    widows: 1;
+  }
+  .card-columns .card {
+    display: inline-block;
+    width: 100%;
+  }
+}
 
-// @media (min-width: 1150px) {
-//   .card-columns {
-//     -webkit-column-count: 3;
-//     -moz-column-count: 3;
-//     column-count: 3;
-//     -webkit-column-gap: 1.25rem;
-//     -moz-column-gap: 1.25rem;
-//     column-gap: 1.25rem;
-//     orphans: 1;
-//     widows: 1;
-//   }
-//   .card-columns .card {
-//     display: inline-block;
-//     width: 100%;
-//   }
-// }
+@media (min-width: 775px) {
+  .card-columns {
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+    -webkit-column-gap: 1.25rem;
+    -moz-column-gap: 1.25rem;
+    column-gap: 1.25rem;
+    orphans: 1;
+    widows: 1;
+  }
+  .card-columns .card {
+    display: inline-block;
+    width: 100%;
+  }
+}
+
+@media (min-width: 1150px) {
+  .card-columns {
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
+    -webkit-column-gap: 1.25rem;
+    -moz-column-gap: 1.25rem;
+    column-gap: 1.25rem;
+    orphans: 1;
+    widows: 1;
+  }
+  .card-columns .card {
+    display: inline-block;
+    width: 100%;
+  }
+}
