Added loading screen, cant change color yet

--- a/startpage/src/assets/_variableOverride.scss
+++ b/startpage/src/assets/_variableOverride.scss
@@ -1,8 +1,8 @@
 //Overrides
 $theme-colors: (
-  "primary": #7986CB,
+  "primary": #063a54,
   "danger": #ff4136
 );
 
 //Custom created color used for accent colors on the site
-$accent: #7986CB;
+$accent: #063a54;
